test/coder/error/private-procedure.pt
using output;

pkg localProcedure is 
    fun sayhi is 
        put("hello world");
        putln;
    end;
end;

sayhi();
